--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,21 @@ img {
     display: flex;
     gap: 40px;
 
+
+}
+
+.nav-bar .li-nav-item:hover::after {
+width: 100%;
+    height: 4px;
+    background-color: #404BBF;
+    content: "";
+    position: absolute;
+    display: block;
+    bottom: 0px;   
+}
+
+.nav-bar .li-nav-item{
+    position: relative;
 }
 
 .address .ul-list {
@@ -143,10 +158,13 @@ img {
 
 .top-section {
     padding: 188px 0;
-}
-
-.top-section {
-    background-color: #2e2f42;
+    background-image: linear-gradient(to bottom,
+                rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+            url(/images/people-office.jpg);
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
 }
 
 .h-top-section {
@@ -241,7 +259,17 @@ width: calc((100% - 72px) / 4);
 .ul-list {
     display: flex;
     gap: 24px;
+}
 
+.icon {
+border: 1px solid #8E8F99;
+    border-radius: 4px;
+    background-color: #F4F4FD;
+    height: 64px;
+    width: 100%;
+    margin-left: 0;
+    margin-bottom: 8px;
+}
 }
 
 /* team-section */
@@ -284,15 +312,39 @@ width: calc((100% - 72px) / 4);
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0.08);
 }
 
 .li-team-section .paragrapf {
     text-align: center;
     margin: 0;
+    margin-bottom: 8px;
 }
 
 .li-team-section-text {
     padding: 32px 0;
+}
+
+.social-links-ts {
+    display: flex;
+        gap: 24px;
+        justify-content: center;
+        list-style-type: none;
+        
+}
+
+.social-links-ts .link-social-ts {
+    display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: #4D5AE5;
+}
+
+.social-links-ts .link-social-ts:hover {
+    background-color: #404BBF;
 }
 
 
@@ -333,6 +385,33 @@ width: calc((100% - 72px) / 4);
 
 .portfolio-section-list-item {
     width: calc((100% - 48px) / 3);
+    
+}
+.portfolio-section-list-item-img {
+    position: relative;
+    overflow: hidden
+}
+
+.overlay {
+    padding: 40px 32px;
+    background-color: #3f51b5;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms ease-in-out;
+    letter-spacing: 0.02em;
+        line-height: 1.5;
+}
+
+.portfolio-section-list-item:hover .overlay {
+    transform: translateY(0);}
+    
+        .portfolio-section-list-item:hover{
+box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0.08);
 }
 
 
@@ -341,12 +420,14 @@ width: calc((100% - 72px) / 4);
 .footer {
     background-color: #2e2f42;
     padding: 100px 0;
+    display: block;
     
     
 }
  .footer .container {
-    
-    justify-content: flex-start }
+    display: flex;
+    justify-content: flex-start
+ }
 
 .footer-paragraph {
     color: #F4F4FD;
@@ -364,3 +445,39 @@ width: calc((100% - 72px) / 4);
     display: inline-block;
     margin-bottom: 16px;
 }
+
+.social-links-footer {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    list-style-type: none;
+
+}
+
+.footer-main-info { display: block;}
+
+.social-media-footer {
+    display: block;
+        padding-left: 120px;
+        
+}
+
+.social-links-footer .link-social-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+}
+
+.social-links-footer .link-social-footer:hover {
+    background-color: #31D0AA;
+}
+
+.social-media-footer .footer-paragraph
+{margin: 0;
+margin-bottom: 16px;
+font-weight: 500;
+Size: 16px}
