--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@ img {
 
 .page-header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .nav-bar {
@@ -123,6 +124,7 @@ width: 100%;
     color: #2e2f42;
     padding: 24px 0;
     display: block;
+    position: relative
 }
 
 .nav-item:hover,
@@ -165,6 +167,7 @@ width: 100%;
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
+            
 }
 
 .h-top-section {
@@ -195,6 +198,7 @@ width: 100%;
         height: 56px;
         border: none;
         border-radius: 4px;
+        transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover {
@@ -236,6 +240,17 @@ width: 100%;
 width: calc((100% - 72px) / 4);
         
 }
+
+.features-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+    border: 1px solid #8E8F99;
+}
 .paragrapf {
     letter-spacing: 0.02em;
         line-height: 1.5;
@@ -259,17 +274,6 @@ width: calc((100% - 72px) / 4);
 .ul-list {
     display: flex;
     gap: 24px;
-}
-
-.icon {
-border: 1px solid #8E8F99;
-    border-radius: 4px;
-    background-color: #F4F4FD;
-    height: 64px;
-    width: 100%;
-    margin-left: 0;
-    margin-bottom: 8px;
-}
 }
 
 /* team-section */
@@ -312,7 +316,9 @@ border: 1px solid #8E8F99;
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);;
 }
 
 .li-team-section .paragrapf {
@@ -347,7 +353,9 @@ border: 1px solid #8E8F99;
     background-color: #404BBF;
 }
 
-
+.social-links-ts .link-social-ts:focus {
+    background-color: #404BBF;
+}
 /* portfolio-section */
 
 .portfolio-section {
@@ -385,35 +393,41 @@ border: 1px solid #8E8F99;
 
 .portfolio-section-list-item {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .portfolio-section-list-item-img {
     position: relative;
     overflow: hidden
 }
-
-.overlay {
-    padding: 40px 32px;
-    background-color: #3f51b5;
-    color: #fff;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms ease-in-out;
-    letter-spacing: 0.02em;
-        line-height: 1.5;
-}
-
-.portfolio-section-list-item:hover .overlay {
-    transform: translateY(0);}
     
-        .portfolio-section-list-item:hover{
-box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0.08);
+.overlay-paragraph {
+  letter-spacing: 0.02em;
+        line-height: 1.5;  
+        color: #f4f4fd;
+        position: absolute;
+        font-size: 16px;
+        top: 0;
+        padding: 40px 32px;
+        background-color: #4d5ae5;
+        height: 100%;
+        width: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.portfolio-section-list-item:hover .overlay-paragraph {
+    transform: translateY(0);}
+
+        .portfolio-section-list-item:hover{
+box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);;
+}
+
+.portfolio-section-list-item:hover .paragrapf{
+transform: translateY(0%);
+}
 
 /* footer */
 
@@ -426,7 +440,8 @@ box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0
 }
  .footer .container {
     display: flex;
-    justify-content: flex-start
+    justify-content: flex-start;
+    align-items: baseline;
  }
 
 .footer-paragraph {
@@ -454,12 +469,11 @@ box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0
 
 }
 
-.footer-main-info { display: block;}
+.footer-main-info { display: block;
+margin-right: 120px}
 
 .social-media-footer {
-    display: block;
-        padding-left: 120px;
-        
+    display: block;       
 }
 
 .social-links-footer .link-social-footer {
@@ -470,9 +484,15 @@ box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0
     height: 40px;
     border-radius: 50%;
     background-color: #4D5AE5;
+    gap: 16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-links-footer .link-social-footer:hover {
+    background-color: #31D0AA;
+}
+
+.social-links-footer .link-social-footer:focus {
     background-color: #31D0AA;
 }
 
@@ -480,4 +500,6 @@ box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.08), 0px 1px 6px 0px rgba(0, 0, 0, 0
 {margin: 0;
 margin-bottom: 16px;
 font-weight: 500;
-Size: 16px}
+Size: 16px
+color:#FFFFFF;
+}
