--- a/css/styles.css
+++ b/css/styles.css
@@ -83,18 +83,23 @@ img {
 
 }
 
-.nav-bar .li-nav-item:hover::after {
+.nav-bar .li-nav-item::after {
 width: 100%;
     height: 4px;
     background-color: #404BBF;
     content: "";
     position: absolute;
     display: block;
-    bottom: 0px;   
+    bottom: -1px; 
+    left: 0;
+    border-radius: 2px;
+    
 }
 
 .nav-bar .li-nav-item{
     position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #404bbf;
 }
 
 .address .ul-list {
@@ -108,6 +113,7 @@ width: 100%;
     letter-spacing: 0.02em;
     color: #434455;
     line-height: 1.5;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 .nav-adress-item:hover, 
@@ -278,6 +284,10 @@ width: calc((100% - 72px) / 4);
 
 /* team-section */
 
+.icon-social-networks-ts {
+    fill: #f4f4fd
+}
+
 .team-section .container .ul-list {
     display: flex;
     margin: 0 auto;
@@ -337,6 +347,9 @@ width: calc((100% - 72px) / 4);
         justify-content: center;
         list-style-type: none;
         
+}
+.social-links-ts-item {
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-links-ts .link-social-ts {
