--- a/css/styles.css
+++ b/css/styles.css
@@ -96,12 +96,6 @@ width: 100%;
     
 }
 
-.nav-bar .li-nav-item{
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: #404bbf;
-}
-
 .address .ul-list {
     display: flex;
     gap: 40px;
@@ -130,7 +124,9 @@ width: 100%;
     color: #2e2f42;
     padding: 24px 0;
     display: block;
-    position: relative
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #404bbf;
 }
 
 .nav-item:hover,
@@ -166,6 +162,7 @@ width: 100%;
 
 .top-section {
     padding: 188px 0;
+    max-width: 1440px;
     background-image: linear-gradient(to bottom,
                 rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
@@ -348,9 +345,6 @@ width: calc((100% - 72px) / 4);
         list-style-type: none;
         
 }
-.social-links-ts-item {
-    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .social-links-ts .link-social-ts {
     display: flex;
@@ -360,6 +354,7 @@ width: calc((100% - 72px) / 4);
         height: 40px;
         border-radius: 50%;
         background-color: #4D5AE5;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-links-ts .link-social-ts:hover {
