--- a/css/styles.css
+++ b/css/styles.css
@@ -492,7 +492,6 @@ margin-right: 120px}
     height: 40px;
     border-radius: 50%;
     background-color: #4D5AE5;
-    gap: 16px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -508,6 +507,10 @@ margin-right: 120px}
 {margin: 0;
 margin-bottom: 16px;
 font-weight: 500;
-Size: 16px
+Size: 16px;
 color:#FFFFFF;
+}
+
+.social-links-footer-item {
+gap: 16px;
 }
