--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ img {
 
 }
 
-.nav-bar .nav-item::after {
+.nav-item-current::after {
 width: 100%;
     height: 4px;
     background-color: #404BBF;
@@ -157,6 +157,21 @@ width: 100%;
     color: #2e2f42;
     text-transform: uppercase;
 }
+ 
+.nav-item-current {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    line-height: 1.5;
+    color: #2e2f42;
+    padding: 24px 0;
+    display: block;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #404bbf;
+}
+
 
 /* top section */
 
@@ -166,7 +181,7 @@ width: 100%;
     background-image: linear-gradient(to bottom,
                 rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
-            url(/images/people-office.jpg);
+            url(../images/people-office.jpg);
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
